--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "mssql": "^7.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.2"
+    "sequelize": "^6.12.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
