--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mssql": "^7.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "qrcode": "^1.5.0",
     "sequelize": "^6.12.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
