--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.2",
@@ -26,6 +27,7 @@
     "mssql": "^7.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "qr-with-logo": "^1.0.4",
     "qrcode": "^1.5.0",
     "sequelize": "^6.12.2",
     "swagger-jsdoc": "^6.1.0",
